# qoverage

./: .gitignore  DEVELOP.md  README.md  codecov.yml  coverage.xml  pyproject.toml  qmldom.md  qoverage.py
.github/workflows/: build_and_test.yml  build_qmldom.yml  build_qmldom_wasm.yml  deploy_container.yml  python-publish-test.yml  python-publish.yml  test.yml
.github/workflows/files/: clang-wasix.cmake_toolchain  clang-wasm.cmake_toolchain  qt6.0001-Fix-Emscripten-detection-on-Arch-Linux.patch  qt6.0001-fixes-for-wasix.patch  qt6base.0001-fixes-for-wasix.patch  qt6declarative.0001-fixes-for-wasix.patch  wasix-libc.0001-Fix-getpid.c-path-in-Makefile.patch  wasix-libc.0002-Fix-duplicate-memcpy.patch
.instrumented/: simple.qml  simple.qml.qoverage.js
distribution/dockerfiles/: qoverage.Dockerfile
qoverage/: __main__.py  annotate.py  dom.py  find_qmldom.py  parse_coverage.py  qmldom.py  report.py
qoverage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qoverage/qml_import/QoverageSingleton/: QoverageSingleton.qml  qmldir
qoverage/qoverage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
qoverage/templates/: file_tracker.template.js
test/: README.md  conftest.py  run_example.py  test_examples.py
test/examples/_notworking_include-js/: included.js
test/examples/_notworking_include-js-lib/: included.js  main.qml
test/examples/_notworking_unused-js/: main.qml  unused.js
test/examples/array/: main.qml
test/examples/arrow/: main.qml
tmprokx54e9/testrunner/: report.xml  tst_simple.qml  tst_simple.qml.qoverage.ast  tst_simple.qml.qoverage.pre
(+43 files in other folders)
