[project]
name = "qoverage"
version = "0.1.1"
description = "Code coverage for QML"
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
maintainers = [
  { name = "Sander Vocke", email = "sandervocke@gmail.com" },
]
requires-python = ">=3.7"

dependencies = [
]

keywords = ['qml', 'coverage']

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Other",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
qoverage = "qoverage.__main__:main"

[project.urls]
Homepage = "https://github.com/SanderVocke/qoverage"
# Documentation = "https://qoverage.readthedocs.io/"
"Bug Tracker" = "https://github.com/SanderVocke/qoverage/issues"
Discussions = "https://github.com/SanderVocke/qoverage/discussions"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]
include = ["qoverage"]
exclude = []

[tool.setuptools.package-data]
qoverage = ["templates/*", "bundled_qmldom/qmldom"]